<resources>
    <string name="app_name">Expense_Tracker</string>
    <string name="expense_tracker_app">Expense Tracker App</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="new_user_create_account">New User? Create Account</string>
    <string name="expense_tracker_app_newregister">Expense Tracker App</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_Newuser">Password</string>
    <string name="first_name">First Name</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_the_password_again">Enter the Password Again</string>
    <string name="back_to_loginpage">Back To LoginPage</string>
    <string name="reset_the_password">Reset the Password</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity">Activity</string>
    <string name="title_splitshare">SplitShare</string>
    <string name="title_account">Account</string>
    <string name="expense_tracker">Expense Tracker</string>
    <string name="Transactions">Expense \nStatistics</string>
    <string name="Limit">Set \nExpense Limit</string>
    <string name="goal">Set \nGoal</string>
    <string name="add_new_expense">Add New Expense</string>
    <string name="enter_the_detail_of_your_expense_to_help_you_to_track_your_spending">Enter the detail of your expense to help you to track your spending</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="select_the_category">Select the category</string>
    <string name="date">Date</string>
    <string name="enter_value">Enter value</string>
    <string name="financial_goal_planner">Financial Goal Planner</string>
    <string name="goal_name">Goal Name</string>
    <string name="enter_goal">Enter goal</string>
    <string name="total_amount">Total Amount</string>
    <string name="set_ngoal">Set \nGoal</string>
    <string name="amount">Amount</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="descriptionsplit">Description</string>


</resources>