<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view1"
            android:text="User Name"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view2"
            android:text="@string/amount"
            android:layout_below="@+id/text_view1"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view3"
            android:text="@string/transaction_date"
            android:layout_below="@+id/text_view2"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view4"
            android:text="@string/descriptionsplit"
            android:layout_below="@+id/text_view3"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/buttonPaid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="30dp"
            android:layout_marginRight="8dp"
            android:text="Paid" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>